# aws-fis-mcp

./: README.md  mkdocs.yml
.github/: CODEOWNERS
docs/: index.md
docs/servers/: aws-fis-mcp-server.md
src/aws-fis-mcp-server/: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py  test.txt
src/aws-fis-mcp-server/awslabs/: __init__.py
src/aws-fis-mcp-server/awslabs/aws_fis_mcp_server/: __init__.py  consts.py  models.py  server.py
src/aws-fis-mcp-server/awslabs/aws_fis_mcp_server/resources/: experiment_template_resource.py
src/aws-fis-mcp-server/awslabs/aws_fis_mcp_server/tools/: __init__.py  experiment_template_tools.py  fis_service_tools.py  resource_discovery_tools.py
src/aws-fis-mcp-server/fastmcp-stubs/: __init__.pyi
src/aws-fis-mcp-server/tests/: __init__.py  conftest.py  test_aws_fis_actions.py  test_cli_main.py  test_cloudformation.py  test_consts.py  test_discover_resources_edge_cases.py  test_experiment_templates.py  test_init.py  test_init_aws_clients.py  test_models.py  test_resource_discovery.py  test_resource_discovery_create_view.py  test_resource_discovery_pagination.py  test_resource_explorer.py  test_server.py  test_server_additional.py  test_server_monkey.py  test_server_new.py  test_update_experiment_template.py  test_update_experiment_template_report_config.py  test_write_protection.py
